--- a/EnjoyEat/EnjoyEat/Views/ContactUs/ContactUs.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/ContactUs/ContactUs.cshtml
@@ -1,6 +1,8 @@
 ﻿@section Styles{
     <link href="~/css/reservations.css" rel="stylesheet" />
+
 }
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.5/dist/sweetalert2.all.min.js"></script>
 <main id="main">
     <!-- ======= Contact Section ======= -->
     <section class="contact">
@@ -88,7 +90,7 @@
                             <div class="col-md-6 form-group mt-3 mt-md-0">
                                 <select class="book-a-table form-control form-select" id="commentOption" v-model="serviceOption">
                                     <option value="" disabled selected>請選擇服務項目</option>
-                                    <template >
+                                    <template>
                                         <option v-for="sq in servicelist" :value="sq.value">{{sq.txt}}</option>
                                     </template>
                                 </select>
@@ -120,7 +122,7 @@
                         </div>
                     </form>
                     <div class="text-center">
-                        <button  id="submitbtn" @@click="submit">送出</button>
+                        <button id="submitbtn" @@click="submit">送出</button>
                     </div>
                 </div>
             </div>
@@ -145,7 +147,7 @@
                     { value: '服務品質', txt: '服務品質' },
                     { value: '宴會及餐敘', txt: '宴會及餐敘' },
                     { value: '其他', txt: '其他' }],
-                },
+            },
             methods: {
                 submit: function () {
                     let _this = this;
@@ -157,13 +159,42 @@
                         ServiceOption: this.serviceOption,
                         QuestionContent: this.message,
                     }
-                    axios.post("https://localhost:7071/api/ContactUs/PostCustomerService", request)
-                        .then(
-                            response => {
-                                alert(response.data);
-                            })
-                },
-            },
+                    if (this.name != '' && this.email != '' && this.phone != null && this.subject != '' && this.serviceOption != '' && this.message != '') {
+                        axios.post("https://localhost:7071/api/ContactUs/PostCustomerService", request)
+                            .then(response => {
+                                //alert(response.data);
+                                Swal.fire({
+                                    allowOutsideClick: false,
+                                    icon: 'success',
+                                    color: '#333',
+                                    iconColor: '#D8CDB9',
+                                    background: '#FFF',
+                                    title: '發送成功',
+                                    //text: '',
+                                    html: '<div class="custom-swal-container"><div class="custom-swal-message">我們收到您的建議，將會盡快回覆您!</div></div>',
+                                    showConfirmButton: false,
+                                    timer: 2500,
+                                    position: 'center'
+                                }).then(result => {
+                                    if (result.dismiss === Swal.DismissReason.timer) {
+                                        window.location.assign("https://localhost:7071");
+                                    };
+                                })
+                            });
+                    } else {
+                        Swal.fire({
+                            allowOutsideClick: false,
+                            icon: 'error',
+                            color: '#333',
+                            iconColor: '#D8CDB9',
+                            confirmButtonColor: '#721B29',
+                            background: '#FFF',
+                            html: '<div class="custom-swal-container"><div class="custom-swal-message">有地方還沒填哦!</div></div>',
+                            // text: '有地方還沒填哦!',
+                        })
+                    }
+                }
+            }
         })
     </script>
 }
