--- a/EnjoyEat/EnjoyEat/Views/MemberManagement/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/MemberManagement/Index.cshtml
@@ -9,7 +9,7 @@
     <nav>
         <div id="memberNavbar" class="d-flex">
             <h5 id="userName">{{fullName}}您好</h5>
-            <button class="btn" @@click="upgrade">
+            <button class="btn" @@click="showSweetAlert">
                 登出
                 <span class="first"></span>
                 <span class="second"></span>
@@ -21,7 +21,7 @@
     <!-- End navbar -->
 
     <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" @@hidden="handleModalClose">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -85,7 +85,7 @@
                         </div>
 
                         <div class="col-lg-4 mt-4 mt-lg-0">
-                            <input class="box noedit" data-aos="zoom-in"  :value="memberInfo.memberId" :disabled="dis" />
+                            <input class="box noedit" data-aos="zoom-in"  :value="memberInfo.memberId" disabled />
                         </div>
 
                         <div class="col-lg-2 mt-4 mt-lg-0">
@@ -283,7 +283,7 @@
 
 
 @section Scripts {
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.5.2/dist/sweetalert2.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.5/dist/sweetalert2.all.min.js"></script>
     <script>
         var app = new Vue({
             el: '#member',
@@ -342,15 +342,18 @@
                 },
             },
             methods: {
+                handleModalClose:function() {
+                    document.body.classList.add('modal-closed');
+                },
                 showSweetAlert:function() {
                     Swal.fire({
-                        allowOutsideClick: 'false',
+                        allowOutsideClick: false,
                         icon: 'info',
                         color: '#FFF',
                         iconColor: '#D8CDB9',
-                        background: '#40e0d0',
+                        background: '#2F4F4F',
                         text: '請先登入喔!',
-                        target: window.document.getElementById('x'),
+                        position:'center',
                         showConfirmButton: false,
                         
                     })
@@ -360,6 +363,7 @@
                         FirstName: this.memberInfo.firstName,
                         LastName: this.memberInfo.lastName,
                         Address: this.memberInfo.address,
+                        Phone:this.memberInfo.phone,
                         Email: this.memberInfo.email,
                         Birthday: this.memberInfo.birthday,
                         Gender: this.memberInfo.gender,
