--- a/EnjoyEat/EnjoyEat/wwwroot/css/MemberManagement.css
+++ b/EnjoyEat/EnjoyEat/wwwroot/css/MemberManagement.css
@@ -13,11 +13,7 @@
 }
 
 /*SweetAlert*/
-.swal2-container {
-    position: absolute;
-    height: 500px;
-    width: 500px;
-}
+
 /*圖片區*/
 .circle {
     border-radius: 50%; /* 設定圓形 */
@@ -169,6 +165,10 @@ span {
 
 
 /*modal樣式*/
+.modal-closed {
+    overflow: hidden;
+    width: 100vw;
+}
 
 .modal-content {
     background-color: rgba(100,100, 100, .6);
