--- a/EnjoyEat/EnjoyEat/Views/MemberManagement/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/MemberManagement/Index.cshtml
@@ -250,7 +250,7 @@
                                     {{order.orderDate}}
                                 </td>
                                 <td>
-                                    {{order.totalPrice}}
+                                    {{order.finalPrice}}
                                 </td>
                                 <td v-if="order.isTakeway">
                                     外帶
@@ -301,7 +301,7 @@
                 //進度條計算
                 countPrice: function () {
                     for (let order of this.memberInfo.orders) {
-                        this.price += order.totalPrice;
+                        this.price += order.finalPrice;
                     }
                     return this.price;
                 },
@@ -408,7 +408,7 @@
                         })
                 },
             },
-            mounted:
+            mounted:{
                 function () {
                     let _this = this;
                     axios.get("https://localhost:7071/api/member/GetMember")
@@ -416,6 +416,7 @@
                             _this.memberInfo = response.data;
                         })
                 }
+            }
         });
 
     </script>
