--- a/EnjoyEat/EnjoyEat/Views/Reservations/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/Reservations/Index.cshtml
@@ -1,5 +1,32 @@
 ﻿@section Styles{
     <link href="~/css/reservations.css" rel="stylesheet" />
+    <style>
+        .modal-content {
+            color: black;
+        }
+
+        .modal-body {
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+        }
+
+        #noticeRule {
+            justify-content: space-around;
+        }
+
+        .modal-content i {
+            color: #D8CDB9;
+        }
+
+        .button-content {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100%;
+        }
+
+    </style>
 }
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vue2-datepicker@3.11.0/index.css">
 <main id="main">
@@ -17,13 +44,13 @@
                         <div class="col-lg-4 col-md-6 form-group d-flex">
                             <select name="" id="adultPicker" class="book-a-table form-control form-select" v-model="adultNumber" required>
                                 <option value="" disabled selected>請選擇大人人數</option>
-                                <template >
+                                <template>
                                     <option :value="ad.value" v-for="ad in adultPicker">{{ad.txt}}</option>
                                 </template>
                             </select>
                             <select name="" id="kidPicker" class="book-a-table form-control form-select" v-model="kidNumber">
-                                <option value="" disabled selected >請選擇小孩人數</option>
-                                <template >
+                                <option value="" disabled selected>請選擇小孩人數</option>
+                                <template>
                                     <option :value="k.value" v-for="k in kidPicker">{{k.txt}}</option>
                                 </template>
                             </select>
@@ -43,7 +70,7 @@
                     <label>用餐時段</label>
                     <div class="col-lg-2 col-md-6 form-group" id="mealTimePicker">
                         <select name="time" id="mealTimePicker" class="book-a-table form-control" v-model="mealTime">
-                            <option value="" disabled selected >請選擇用餐時段</option>
+                            <option value="" disabled selected>請選擇用餐時段</option>
                             <template>
                                 <option :value="mt.value" v-for="mt in mealTimePicker">{{mt.txt}}</option>
                             </template>
@@ -101,30 +128,50 @@
                         </template>
                     </span>
                 </div>
+
                 <div class="text-center book-a-table php-email-form " id="reservationNext">
-                    <button type="submit" id="show" @@click="next" :disabled="disSet" :class="disClass">下一步，填寫聯絡資訊</button>
+                    <button type="button" id="show" :disabled="disSet" :class="disClass" data-bs-toggle="modal" data-bs-target="#infoModal">
+                        下一步，填寫聯絡資訊
+                    </button>
                 </div>
-                <dialog id="infoModal" class="text-center book-a-table php-email-form">
-                    <h1 id="houseRule">規則與注意事項</h1>
-                    <div id="ruleContainer">
-                        <p>【預約時的注意事項】</p>
-                        <p>-餐廳接受一個月內的線上訂位。</p>
-                        <p>-用餐時間120分鐘。</p>
-                        <p>-只為有效聯絡電話之預訂保留座位。</p>
-                        <p>-於線上訂位成功後，若餐廳無法聯繫上訂位人做訂位確認時，本餐廳將保有取消其訂位之權利。</p>
-                        <p>-為確保客人用餐權益，若需取消或更改訂位，請提前告知。</p>
-                        <p>-訂位將保留15分鐘，若逾時將自動取消訂位。</p>
-                        <p>-線上預訂系統將自動安排座位，如需指定座位請致電至餐廳。</p>
-                        <p>-特殊節日恕不接受線上預訂。</p>
-                        <p>-本餐廳保留條款內容變更與解釋、暫停或終止本線上訂位之權利。</p>
-                        <p>服裝儀容：</p>
-                        <p>賓客請避免穿著拖鞋，男士請避免穿著無袖背心</p>
+
+                <div class="modal fade text-center book-a-table php-email-form" id="infoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" @@hidden="handleModalClose">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id=" houseRule">規則與注意事項</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                                    <span class="button-content">
+                                        <i class="fa-solid fa-xmark"></i>
+                                    </span>
+                                </button>
+
+                            </div>
+                            <div class="modal-body">
+                                <template>
+                                    <div id="ruleContainer">
+                                        <p>【預約時的注意事項】</p>
+                                        <p>-餐廳接受一個月內的線上訂位。</p>
+                                        <p>-用餐時間120分鐘。</p>
+                                        <p>-只為有效聯絡電話之預訂保留座位。</p>
+                                        <p>-於線上訂位成功後，若餐廳無法聯繫上訂位人做訂位確認時，本餐廳將保有取消其訂位之權利。</p>
+                                        <p>-為確保客人用餐權益，若需取消或更改訂位，請提前告知。</p>
+                                        <p>-訂位將保留15分鐘，若逾時將自動取消訂位。</p>
+                                        <p>-線上預訂系統將自動安排座位，如需指定座位請致電至餐廳。</p>
+                                        <p>-特殊節日恕不接受線上預訂。</p>
+                                        <p>-本餐廳保留條款內容變更與解釋、暫停或終止本線上訂位之權利。</p>
+                                        <p>服裝儀容：</p>
+                                        <p>賓客請避免穿著拖鞋，男士請避免穿著無袖背心</p>
+                                    </div>
+                                </template>
+                            </div>
+                            <div class="modal-footer" id="noticeRule">
+                                <button id="confirmRulebBtn" type="button" @@click="next" class="btn btn-secondary" data-bs-dismiss="modal">我已閱讀並同意規則與注意事項</button>
+                            </div>
+                        </div>
                     </div>
-                    <div id="noticeRule">
-                        <p>* 請詳細閱讀規則與注意事項</p>
-                        <button id="confirmRulebBtn" type="button" @@click.prevent="next">我已閱讀並同意規則與注意事項</button>
-                    </div>
-                </dialog>
+                </div>
+            </div>
         </footer>
     </div>
 </main>
@@ -135,20 +182,12 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue2-datepicker@3.11.0/index.js"></script>
     <script>
-        /*填完用餐訊息轉到dialog*/
-        let btn = document.querySelector("#show");
-        let infoModal = document.querySelector("#infoModal");
-        let close = document.querySelector("#close");
-        btn.addEventListener("click", function () {
-            infoModal.showModal();
-        });
-        confirmRulebBtn.addEventListener("click", function () {
-            infoModal.close();
-        });
+
         baseAddress = "https://localhost:7071";
         let app = new Vue({
             el: "#d1",
             data: {
+                showDialog: false,
                 showmodal: false,
                 ReserveDate: null,
                 adultNumber: '',
@@ -169,11 +208,11 @@
                     { value: '3位小孩', txt: '3位小孩' },
                     { value: '4位小孩', txt: '4位小孩' }],
                 mealTimePicker: [
-                    { value:"11:00", txt: '11:00' },
-                    { value:"13:00", txt: '13:00' },
-                    { value:"15:00", txt: '15:00' },
-                    { value:"17:00", txt: '17:00' },
-                    { value:"19:00", txt: '19:00' }],
+                    { value: "11:00", txt: '11:00' },
+                    { value: "13:00", txt: '13:00' },
+                    { value: "15:00", txt: '15:00' },
+                    { value: "17:00", txt: '17:00' },
+                    { value: "19:00", txt: '19:00' }],
             },
             computed: {
                 disSet: function () {
@@ -187,32 +226,34 @@
                 },
                 disClass: function () {
                     if (this.adultNumber == '' || this.kidNumber == '' || this.ReserveDate == null || this.mealTime == '') {
-                        return this.disColor = "nono";
+                        return this.disColor = "nono btn btn-primary";
                     }
                     else {
-                        return this.disColor = ""
+                        return this.disColor = "btn btn-primary"
                     }
                 },
             },
             methods: {
+                handleModalClose: function () {
+                    document.body.classList.add('modal-closed');
+                },
                 next: function () {
-                    let _this=this;
-                    var request={
+                    let _this = this;
+                    var request = {
                         ReservationDate: _this.ReserveDate,
                         NumberofAdultGuest: _this.adultNumber,
                         NumberofKidGuest: _this.kidNumber,
                         ReservationTime: _this.mealTime,
                     }
-                    if (this.adultNumber != '' || this.kidNumber != '' || this.ReserveDate != null || this.mealTime != '') {   
+                    if (this.adultNumber != '' || this.kidNumber != '' || this.ReserveDate != null || this.mealTime != '') {
                         axios.post("https://localhost:7071/api/reservation/PostReservation", request)
                             .then(
                                 response => {
-                                    window.location.href = `Reservations/booking`
-                                    alert(response.data);
+                                    let id=response.data.reserveId;
+                                    window.location.href = `Reservations/booking?ReserveId=${id}`
                                 })
-
                     }
-                }
+                },
             },
         });
     </script>
