--- a/EnjoyEat/EnjoyEat/Views/Reservations/success.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/Reservations/success.cshtml
@@ -1,30 +1,63 @@
-﻿<main id="main">
-<div class="container alert-area col-10">
-    <p>訂位成功</p>
-    <p>訂位詳細資訊已寄送到您的電子信箱</p>
-</div>
-<br>
-<div class="container check-area col-10 col-xl-4">
-    <div class="check-title">
-        <p class="username"></p>
-        <p>您好，以下為訂位資訊：</p>
-    </div>
-    <hr>
-    <div class="booking-detail">
-        <p class="booking-date">2023/02/02</p>
-        <p class="booking-people">3位大人</p>
-    </div>
-    <hr>
-    <div class="store-detial">
-        <p>店家名稱</p>
-        <a href="tel:0233221368">02 3322 1368</a><br />
-        <a href="https://goo.gl/maps/VARMRkiZqDQLhgWbA">100 台北市中正區濟南路一段321號</a>
-    </div>
-    <div class="check-btn">
-        <div class="row m-0">
-            <!--<button class="col m-1 btn-cancel" type="button">取消預定</button>-->
-            <a class="col m-1 btn-menu" href="/Menu/Signature">看菜單</a>
+﻿@section Styles{
+    <link href="~/css/reservations.css" rel="stylesheet" />
+}
+
+<!-- d-flex align-items-center -->
+<div class="container" id="bookedConfirm">
+    <div>
+        <div class="flex-shrink-0" style="text-align:center">
+            <p><img src="~/img/success.png" id="successicon" />您已訂位成功，訂位詳細資訊已寄至您的信箱!</p>
         </div>
     </div>
 </div>
-</main>
+<form action="forms/book-a-table.php" method="post" role="form" class="php-email-form" data-aos="fade-up" data-aos-delay="100">
+    <main id="main">
+        <div id="bookConfirmInformation">
+            <div class="container" id="bookedConfirm">
+                <div>
+                    <div class="flex-shrink-0" style="text-align:center">
+                        <h6>X小姐/先生您好，以下為您的訂位資訊</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="d-grid gap-2  mx-auto">
+                <div id="bookedInfornations">
+                    <div>
+                        <label id="bookDate">訂位日期:</label>
+                        <span>2022/06/12</span>
+                    </div>
+                    <div>
+                        <label id="bookPeriod">訂位時段:</label>
+                        <span>13:00</span>
+                    </div>
+                    <div>
+                        <label id="bookNumber">用餐人數:</label>
+                        <span>3位大人, 0位小孩</span>
+                    </div>
+                </div>
+            </div>
+            <br/>
+            <div class="d-grid gap-2 mx-auto">
+                <div id="ETInformation">
+                    <div>
+                        <h5> 享食高級餐廳</h5>
+                    </div>
+                    <div>
+                        <span>
+                            <img src="~/img/location.png" id="locationIcon"  />
+                            <span>
+                                新北市 中和區 ,
+                                灝文家
+                            </span>
+                        </span>
+                    </div>
+                    <div>
+                        <img src="~/img/phone.png" id="phoneIcon" />
+                        <span>02 1234-6789</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+</form>
+<!-- End #main -->
