--- a/EnjoyEat/EnjoyEat/wwwroot/css/Reservations.css
+++ b/EnjoyEat/EnjoyEat/wwwroot/css/Reservations.css
@@ -93,6 +93,12 @@
     transition: .4s;
     border-radius: 50px;
 }
+textarea {
+    resize: none; /*不讓使用者调整 <textarea> 元素的大小*/
+    overflow: auto; /*需要時顯示滾輪條  */
+    height:150px;
+}
+
 /*datepicker*/
 .datepicker {
     width: 100%;
@@ -118,8 +124,8 @@
     padding: .375rem 2.25rem .375rem .75rem;
 }
 
-input::placeholder {
-    color: red; /* 在這裡更改顏色為你想要的顏色 */
+#datepicker input::placeholder {
+    color: black;   /* 在這裡更改顏色為你想要的顏色 */
 }
 
 .mx-calendar-content .cell.disabled {
