--- a/EnjoyEat/EnjoyEat/Views/Reservations/booking.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/Reservations/booking.cshtml
@@ -16,6 +16,8 @@
                     <h2>確認訂位與填寫聯絡資訊</h2>
                 </div>
                 <form role="form"
+                      action="Success"
+                      method="post"
                       class="php-email-form"
                       data-aos="fade-up"
                       data-aos-delay="100">
@@ -83,7 +85,7 @@
                         </div>*@
                     </div>
                     <button type="button" id="bookReturn" @@click="Return">返回上一頁</button>
-                    <button type="button" id="bookNow" @@click="BookNow">確認訂位</button>
+                    <button type="submit" id="bookNow" @@click="BookNow">確認訂位</button>
                 </form>
             </div>
         </div>
